@@ -22,6 +22,8 @@
 #include "drumkv1widget.h"
 #include "drumkv1_param.h"
 
+#include "drumkv1widget_config.h"
+
 #include <QDomDocument>
 #include <QTextStream>
 #include <QFileInfo>
@@ -446,7 +448,14 @@ drumkv1widget::drumkv1widget ( QWidget *pParent, Qt::WindowFlags wflags )
 	QObject::connect(m_ui.TabBar, SIGNAL(currentChanged(int)),
 		m_ui.StackedWidget, SLOT(setCurrentIndex(int)));
 
+	drumkv1widget_config *pConfig = drumkv1widget_config::getInstance();
+	if (pConfig)
+		m_ui.helpUseNativeDialogsAction->setChecked(pConfig->bUseNativeDialogs);
+
 	// Menu actions
+	QObject::connect(m_ui.helpUseNativeDialogsAction,
+		SIGNAL(triggered(bool)),
+		SLOT(helpUseNativeDialogs(bool)));
 	QObject::connect(m_ui.helpAboutAction,
 		SIGNAL(triggered(bool)),
 		SLOT(helpAbout()));
@@ -1250,6 +1259,16 @@ void drumkv1widget::contextMenuRequest ( const QPoint& pos )
 
 
 // Menu actions.
+void drumkv1widget::helpUseNativeDialogs ( bool bOn )
+{
+	drumkv1widget_config *pConfig = drumkv1widget_config::getInstance();
+	if (pConfig) {
+		pConfig->bUseNativeDialogs = bOn;
+		pConfig->bDontUseNativeDialogs = !pConfig->bUseNativeDialogs;
+	}
+}
+
+
 void drumkv1widget::helpAbout (void)
 {
 	// About...
@@ -1297,6 +1316,7 @@ void drumkv1widget::helpAbout (void)
 
 	QMessageBox::about(this, tr("About") + " " DRUMKV1_TITLE, sText);
 }
+
 
 void drumkv1widget::helpAboutQt (void)
 {
